--- a/data/default.yml
+++ b/data/default.yml
@@ -65,6 +65,7 @@ pages:
         - car_sell # 輸送用機器販売/整備
         - freight_warehouse # 郵便, 配送, 貨物輸送, 倉庫
         - transportation # その他運輸業
+        - geoscience_space # 気象, 地質, 天体, 宇宙
         - infrastructure # 電力, 水道, ガス
         - construction # 土木, 建設, 建築設計
         - computer # 電気通信, 情報技術
