--- a/data/default.yml
+++ b/data/default.yml
@@ -70,7 +70,7 @@ pages:
         - construction # 土木, 建設, 建築設計
         - computer # 電気通信, 情報技術
         - advertising # グラフィック, 音楽, 広告, 娯楽
-        - journalist_writer # ジャーナリスト, 作家
+        - journalist_writer # ジャーナリスト, 作家, 歴史, 議会
         - nursery_caregiver # 保育, 介護
         - medical # 医師, 看護師, 医療
         - finance # 金融, 保険
