--- a/data/default.yml
+++ b/data/default.yml
@@ -57,7 +57,7 @@ pages:
         - primary # 農・林・畜産・水産業
         - food_processing # 食品, 飲料, たばこ
         - wood_furniture # 木材, 木製品, 家具
-        - textile # 繊維, 衣料, 皮
+        - textile # 繊維, 衣料, 皮革
         - chemical_paper # 化学, パルプ, 紙, 石油, プラスチック, ゴム 
         - mining_ceramic # 鉱業, 砂, 石炭, 石材, 窯業
         - print # 印刷, 製本
