--- a/data/default.yml
+++ b/data/default.yml
@@ -65,13 +65,13 @@ pages:
         - car_manufacturing # 輸送用機器(部品)製造
         - electric_manufacturing # 電子機器/部品製造
         - other_manufacturing # その他製造業
-        - maintenance_repair # 設備保全, 機械修理
         - car_sell # 輸送用機器販売/整備
+        - maintenance_repair # 設備保全, 機械修理, 検査
+        - construction # 土木, 建設, 測量, 建築設計
+        - infrastructure # 電力, 水道, ガス
         - freight_warehouse # 郵便, 配送, 貨物輸送, 倉庫
         - transportation # その他運輸業
         - geoscience_space # 気象, 地質, 天体, 宇宙
-        - infrastructure # 電力, 水道, ガス
-        - construction # 土木, 建設, 建築設計
         - computer # 電気通信, 情報技術
         - advertising # グラフィック, 音楽, 広告, 娯楽
         - journalist_writer # ジャーナリスト, 作家, 歴史, 議会
